[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "Extension traits for `String` and `&str` types."
name = "string_more"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["String", "str", "extension-trait", "in-place"]
rust-version = "1.80"
repository = "https://github.com/daddinuz/string_more"

[dependencies]
