[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "Extension traits for `String` and `&str` types."
name = "string_more"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["String", "str", "extension", "in-place", "edit-distance"]
rust-version = "1.60"
repository = "https://github.com/daddinuz/string_more"

[dependencies]
